--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fms
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.dialect=org.hibernate.dialect.PostgreSQL82Dialect
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
-
+spring.profiles.active=@spring.profiles.active@
