Поменял настройки приложения Файл с данными для заливки временно загрузил в проект Добавил сервисы для заливки файла, но требуется оптимизация кода

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.profiles.active=@spring.profiles.active@
+
+passport.storage.filePath=static/list_of_expired_passports.csv
+passport.storage.link=https://xn--b1ab2a0a.xn--b1aew.xn--p1ai/upload/expired-passports/list_of_expired_passports.csv.bz2
+passport.storage.tempPath=/tmp
