--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.config.activate.on-profile=dev
-spring.datasource.url=jdbc:postgresql://localhost:5432/fms
+spring.datasource.url=jdbc:postgresql://localhost:5432/fms-dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.datasource.username=postgres
