--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,8 @@
 spring.config.activate.on-profile=prod
 spring.datasource.url=jdbc:postgresql://localhost:5432/fms
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 spring.jpa.show-sql=false
-spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.hibernate.ddl-auto=none
+
+passport.storage.link=https://xn--b1ab2a0a.xn--b1aew.xn--p1ai/upload/expired-passports/list_of_expired_passports.csv.bz2
