--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,11 +1,7 @@
 spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:postgresql://localhost:5432/fms-test
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+
+passport.storage.link=classpath://resources/1000_invalid_passports_from_tail.csv.bz2
 
