--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.profiles.active=@spring.profiles.active@
 
-passport.storage.filePath=static/list_of_expired_passports.csv
-passport.storage.link=https://xn--b1ab2a0a.xn--b1aew.xn--p1ai/upload/expired-passports/list_of_expired_passports.csv.bz2
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+
